[package]
name = "oxilearn"
version = "0.1.0"
edition = "2021"

[lib]
name = "oxilearn"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15"
rand = { version = "0.8", features = ["small_rng"] }
tch = { version = "0.16" }
torch-sys = { version = "0.16" }
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
