[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "oxilearn"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = ["gymnasium>=0.29.0", "torch==2.2.0"]

[tool.maturin]
python-source = "python"
module-name = "oxilearn.oxilearn"
features = ["pyo3/extension-module"]
